update data pack io